--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
 copyright: Untitled
 sass:
   sass_dir: assets/sass
-url: http://localhost:4000
+url: http://rhdalflrhd.github.io
 disqus_shortname: stratajekylldemo
 facebook_username:
 twitter_username: "#"
