--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: gaeun's blog
 description: >
-  **I am Gaeun S2**
-  <br>
+  **I am Gaeun**
   welcome to my blog.
+copyright: Untitled
 copyright: Untitled
 sass:
   sass_dir: assets/sass
