--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: gaeun's blog
 description: >
+  **I am Strata**, a super simple
+  responsive site template freebie
+  crafted by [HTML5 UP](http://html5up.net).
   **I am Gaeun**
   welcome to my blog.
 copyright: Untitled
