--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@ title: gaeun's blog
 description: >
   **I am Strata**, a super simple
   responsive site template freebie
-  crafted by [HTML5 UP](http://html5up.net).
+  crafted by [HTML5 UP]
   **I am Gaeun**
   welcome to my blog.
+  (http://html5up.net).
 copyright: Untitled
 copyright: Untitled
 sass:
