--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: gaeun's blog
 description: >
-  **I am Strata**, a super simple
+  **I am Strat222a**, a super simple
   responsive site template freebie
   crafted by [HTML5 UP]
   **I am Gaeun**
