--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: gaeun's blog
 description: >
-  **I am Strat222a**, a super simple
-  **I am Gaeun**
+  **I am Strat222a**, **I am Gaeun** a super simple 
   welcome to my blog.
   responsive site template freebie
   crafted by [HTML5 UP](http://html5up.net).
