--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: gaeun's blog
 description: >
-  **I am Strat222a**, **I am Gaeun** a super simple 
-  welcome to my blog.
-  responsive site template freebie
-  crafted by [HTML5 UP](http://html5up.net).
+  **I am Gaeun**,
+  welcome to my blog(http://html5up.net).
 copyright: Untitled
 sass:
   sass_dir: assets/sass
