--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: gaeun's blog
 description: >
-  **I am Gaeun**,
-  welcome to my blog(http://html5up.net).
+  **I am Gaeun**,              
+  welcome to my blog.
 copyright: Untitled
 sass:
   sass_dir: assets/sass
