--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: gaeun's blog
 description: >
-  **I am Gaeun**,              
-  welcome to my blog.
+  **I am Gaeun**, welcome
 copyright: Untitled
 sass:
   sass_dir: assets/sass
