--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,5 @@ email: gaeungyeongsul@gmail.com
 gems: [jekyll-paginate]
 paginate_path: "/page/:num/"
 paginate: 5
+category_dir: category/
+tag_dir: tag/
